# mlir-fusion-demo

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
cmake/modules/: RYUKIConfig.cmake
include/: CMakeLists.txt
include/RYUKI/Dialect/Toy/: CMakeLists.txt  ToyDialect.h  ToyOps.h  ToyOps.td
include/RYUKI/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/Dialect/Toy/: CMakeLists.txt  ToyDialect.cpp  ToyOps.cpp
lib/Transforms/: CMakeLists.txt  MatmulBiasFusion.cpp
scripts/: build_llvm.sh  build_ryuki.sh
test/Toy/: CMakeLists.txt  matmul_bias.mlir  matmul_bias_fused.ll  matmul_bias_unfused.ll
tools/: CMakeLists.txt  gen_matmul_bias.py
tools/ryuki-opt/: CMakeLists.txt  ryuki-opt.cpp
tools/ryuki-runner/: CMakeLists.txt  ryuki-runner.cpp
